Fix text align style.

--- a/src/scss/parts/elements/typography.scss
+++ b/src/scss/parts/elements/typography.scss
@@ -42,5 +42,5 @@ p {
 }
 
 .has-text-align-right {
-  text-align: left;
+  text-align: right;
 }
